changed moveFloats and moveEnemies to setInterval... in attempt to fix float bug... could be due to timers overlapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -108,6 +108,7 @@ body {
   background-image: url('../assets/Pad_04_1.png');
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: bottom;
   cursor: pointer;
 }
 
